--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="index.html">Beranda</a></li>
             <li><a href="tentang-kami.html">Tentang kami</a></li>
             <li><a href="kurikulum.html">Kurikulum</a></li>
-            <li><a href="dosen.html">Dosen</a></li>
+            <li><a href="beasiswa.html">Beasiswa</a></li>
             <li><a href="fasilitas.html">Fasilitas</a></li>
         </ul>
     </nav>
