--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -110,7 +110,7 @@
             <li><a href="index.html">Beranda</a></li>
             <li><a href="Tentang-kami.html">Tentang Kami</a></li>
             <li><a href="kurikulum.html">Kurikulum</a></li>
-            <li><a href="Dosen.html">Dosen</a></li>
+            <li><a href="beasiswa.html">Beasiswa</a></li>
             <li><a href="Fasilitas.html">Fasilitas</a></li>
         </ul>
     </nav>
